# salary_predictor

./: app.py  pyproject.toml
Data/: Salary_Data.csv
