[tool.poetry]
name = "salary_project"
version = "0.1.0"
description = ""
authors = ["olha <lelia363@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
streamlit = "^1.10.0"
pandas = "^1.4.3"
numpy = "^1.23.0"
scikit-learn = "^1.1.1"
matplotlib = "^3.5.2"
plotly = "^5.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
